--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
                     <div class="content text-center" data-aos='fade-up' data-aos-delay='150'>
                         <h4 class="hero-title mb-5">Jamila<span><i class="fas fa-wine-glass mx-2 text-warning"></i></span><span class="hero-sub-title">Food</span></h4>
                         <h6 class="hero-under-text text-muted mb-2">ready to try our menu ?</h6>
-                        <p class="hero-text">  All of our menu items are inspired by _____ cuisine and have been created by our head chef, (CN), after studying authentic _____ cuisine in ____. Not only do we have fresh flown-in seafood from the northeast, but we also have a variety of handcrafted cocktails, wine, and beer to choose from.
-
-Come dine with us & experience an authentic ______ meal in an intimate dining space. We look forward to serving you! </p>
+                        <p class="hero-text">  All of our menu items are inspired by _____ cuisine and have been created by our head chef, (CN), after studying authentic _____ cuisine in ____. Not only do we have fresh flown-in seafood from the northeast, but we also have a variety of handcrafted cocktails, wine, and beer to choose from.</p>
                         <button class="hero-btn py-2 px-3 rounded mt-3"><a href = '#menu'>check our menu</a></button>
                     </div>
                 </div>
